[package]
name = "cacheharvest"
version = "0.1.0"
edition = "2021"
description = "A lightweight Rust utility for exporting cached browser assets from Google Chrome"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
dirs = "6.0"
infer = "0.19"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
